# oli

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PUSH_TO_GITHUB.md  README.md  REVIEW_2026-05-30.md  hermes_browser_mcp.py  merge_sort.py  oli_lenguaje_de_marca_v0_1.md  opencode.json  openrouter_docs.txt  pyproject.toml
.bridge/: BITACORA.md  BRIEFING_FOR_CLAUDE.md  CURRENT_TASK.md  HANDOFF_LOG.md  PENDIENTES.md  README.md  REPO_MAP.md
.bridge/tasks/: TASK-004-analysis.md  TASK-004-claude-hardcoded-output.md  TASK-004-oli-output.md  TASK-005-output.md  TASK-006-output.md  TASK-007-output.md
.opencode/: opencode.db-shm  opencode.db-wal
Consultor Estrategico Codex/00_contexto/: 00_contexto_vivo_codex.md  02_protocolo_consultor_codex.md  03_tracking_estrategico.md  README.md  (+4 more)
apps/: __init__.py
bitacora/: README.md  sesion-01.md  sesion-02.md  sesion-03.md  sesion-04.md  sesion-05.md  sesion-06.md  sesion-07.md
brand/: README.md  package-lock.json  package.json  presentacion_brandbook.html
playbooks/: README.md
scripts/: configure_openrouter_key.py  create_oli_sales_ux_docx.py  demo_cockpit.py  restart_api.ps1  run_api.ps1  test_openrouter_model.py
tdd/: README.md
tests/: conftest.py  test_api_v0.py  test_configure_openrouter_key.py  test_draft_outreach.py  test_env_config.py  test_langgraph_mission_graph.py  test_mission_kernel.py  test_mission_store.py  test_model_adapter.py  test_model_router_status.py  test_model_router_tiers.py  test_postgres_checkpointer.py  test_slice_001_mock.py  test_v0_acceptance.py  test_weekly_client_report.py
(+120 files in other folders)
