[project]
name = "oli"
version = "0.0.1"
description = "Oli V0 mission kernel"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136",
  "langgraph>=1.0",
  "pydantic>=2.10",
  "psycopg2-binary>=2.9",
  "psycopg[binary]>=3.1",
  "sqlalchemy>=2.0",
  "langgraph-checkpoint-postgres>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
pythonpath = ["."]
